Fix jumpy section headers when the toggles hide on filtering

--- a/src/sidebars/block-manager/styles/editor.scss
+++ b/src/sidebars/block-manager/styles/editor.scss
@@ -35,6 +35,7 @@
 			align-items: center;
 			display: flex;
 			justify-content: space-between;
+			min-height: 48px;
 			padding: 1em 0;
 
 			.components-base-control__field {
